# SCAM

./: .gitignore  AGENTS.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  USAGE.md  package-lock.json  pyproject.toml
docs/: index.html
docs/data/scam-results/: README.md
docs/replays/: cred-aws-forward.html  deputy-external-cred-share.html  deputy-lookalike-recipient.html  ecom-fake-storefront.html  ecom-invoice-fraud.html  leak-meeting-notes.html  leak-summary-creds.html  phish-calendar-invite.html  phish-shared-doc.html  se-mfa-fatigue.html  vault-reddit-ama-trap.html
results/official/: README.md
scam/: __init__.py  cli.py
scam/agentic/: __init__.py  aggregate.py  benchmark_version.py  environment.py  evaluator.py  export_html.py  export_video.py  judge.py  replay.py  reporting.py  results.py  runner.py  scenario.py  site_generator.py
scam/models/: __init__.py  anthropic.py  base.py  discovery.py  gemini.py  openai.py
scam/utils/: __init__.py  config.py
scenarios/: _template.yaml  confused_deputy.yaml  credential_autofill.yaml  credential_exposure.yaml  data_leakage.yaml  ecommerce_scams.yaml  inbox_phishing.yaml  multi_stage.yaml  prompt_injection.yaml  social_engineering.yaml
skills/: baseline.md  security_expert.md
tests/: test_agentic.py  test_export_html.py  test_replay.py
